# event-digest

./: .gitignore  404.html  README.md  config.yaml  index.html  preferences.yaml  pyproject.toml
.claude/: routine_prompt.md
data/: curated_culture.yaml  fun_facts.yaml  this_day.yaml  tv_recommendations.yaml  venues_candidates.yaml
scripts/: build_demo.py  deploy.sh  print_routine_prompt.sh  run_and_deploy.sh
src/: distance.py  enrich.py  image_cache.py  main.py  models.py  notify.py  preferences.py  render.py  store.py  sub_genre.py  weather.py  web_enrich.py
src/scrapers/: __init__.py  barby.py  base.py  caesarea.py  cameri.py  gesher.py  habima.py  hasimta.py  heichal_givatayim.py  heichal_tlv.py  lessin.py  reading3.py  shuni.py  suzanne_dellal.py  tmuna.py  tzavta.py  yoram_loewenstein.py  zappa_herzliya.py  zappa_tlv.py
templates/: digest.html  email_digest.html
